# atlassian-sprint-review-summary

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  config.yaml  pyproject.toml  samconfig.toml  template.yaml
.cursor/rules/: visuals-mermaid.mdc
docs/: api-reference.md  atlassian-integration.md  authentication.md  deployment.md  prompt-guide.md
events/: summarize.json
src/handler/: main.py  requirements.txt
src/handler/auth/: __init__.py  forge_jwt.py
src/handler/bedrock/: __init__.py  client.py
src/handler/core/: __init__.py  config.py  response.py
src/handler/prompt/: __init__.py  builder.py
tests/: conftest.py  test_auth.py  test_main.py  test_prompt_builder.py
