[tool.poetry]
name = "atlassian-sprint-review-summary"
version = "0.1.0"
description = "AI-driven sprint review summaries via Amazon Bedrock for Atlassian Jira."
authors = ["Andrey Voloshko"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
boto3 = ">=1.35.0"
pyjwt = { version = ">=2.9.0", extras = ["crypto"] }
pyyaml = ">=6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-mock = ">=3.14.0"
ruff = ">=0.8.0"
poethepoet = ">=0.31.0"

[tool.poe.tasks]
test = "pytest tests/ -v"
lint = "ruff check src tests"
format = "ruff format src tests"
build = "sam build"
invoke = "sam local invoke SummarizeFunction -e events/summarize.json"
start-api = "sam local start-api"
deploy = "sam deploy"
deploy-dev = "sam deploy --config-env dev"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src/handler"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
